# jmapper

./: .gitignore  .rustfmt.toml  Cargo.toml  DESIGN.md  README.md  cornucopia.toml  deny.toml  flake.nix  jmapper.example.toml  schema.sql
.github/workflows/: ci.yml
.tack/: pins.lock.json
crates/dav-sync/: Cargo.toml  INTEGRATION.md
crates/dav-sync/src/: caldav.rs  carddav.rs  engine.rs  error.rs  http.rs  lib.rs  service.rs  store.rs
crates/dav-sync/src/convert/: calendar.rs  contact.rs  mod.rs
crates/dav-sync/src/dav/: client.rs  href.rs  mod.rs  xml.rs
crates/dav-sync/tests/: mock_dav.rs
crates/imap-sync/: Cargo.toml
crates/imap-sync/migrations/: 0002_message_imap_uid_unique.sql
crates/imap-sync/src/: account.rs  cache.rs  db.rs  error.rs  imap.rs  lib.rs  oauth.rs  provider.rs  smtp.rs  sync.rs  testkit.rs  threading.rs
crates/jmap-protocol/: Cargo.toml
crates/jmap-protocol/src/: email.rs  error.rs  filter.rs  ids.rs  lib.rs  mailbox.rs  method.rs  methods.rs  session.rs  thread.rs
crates/jmap-server/: Cargo.toml
crates/jmap-server/src/: api.rs  auth.rs  blob.rs  error.rs  events.rs  lib.rs  mime.rs  observability.rs  resolve.rs  router.rs  scheduler.rs  session.rs  state.rs  upload.rs
crates/jmap-server/src/methods/: calendar.rs  calendar_aux.rs  contacts.rs  copy.rs  dav_common.rs  email.rs  email_import.rs  email_parse.rs  email_props.rs  email_set.rs  email_submission.rs  identity.rs  mailbox.rs  mailbox_set.rs  mod.rs  push_subscription.rs  quota.rs  search_snippet.rs  static_object.rs  thread.rs  vacation.rs
crates/jmap-server/tests/: router.rs
crates/jmapper/: Cargo.toml
crates/jmapper-codegen/: Cargo.toml
crates/jmapper-codegen/src/: queries.rs
crates/jmapper-codegen/src/queries/: accounts.rs  blobs.rs  dav.rs  folders.rs  mailboxes.rs  messages.rs  migrations.rs  oauth.rs  raw_messages.rs  state.rs  submissions.rs  threading.rs
crates/jmapper/src/: bootstrap.rs  config.rs  main.rs  reload.rs
nix/: module.nix  package.nix
queries/: accounts.sql  blobs.sql  dav.sql  folders.sql  mailboxes.sql  messages.sql  migrations.sql  oauth.sql  raw_messages.sql  state.sql  submissions.sql  threading.sql
