[package]
name = "dav-sync"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
tokio.workspace = true
futures.workspace = true

reqwest.workspace = true
quick-xml.workspace = true
calcard.workspace = true

tokio-postgres.workspace = true
deadpool-postgres.workspace = true
jmapper-codegen = { version = "0.0.0", path = "../jmapper-codegen" }

serde_json.workspace = true
chrono.workspace = true
chrono-tz.workspace = true

tracing.workspace = true
thiserror.workspace = true

sha1.workspace = true
hex.workspace = true
base64.workspace = true
url.workspace = true
percent-encoding.workspace = true

[dev-dependencies]
imap-sync = { version = "0.1.0", path = "../imap-sync" }
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1", features = ["macros", "rt", "net"] }
pretty_assertions = "1"

[lints]
workspace = true
