[package]
name              = "dav-sync"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
futures.workspace = true
tokio.workspace   = true

calcard.workspace   = true
quick-xml.workspace = true
reqwest.workspace   = true

deadpool-postgres.workspace = true
jmapper-codegen             = { path = "../jmapper-codegen", version = "0.0.0" }
tokio-postgres.workspace    = true

chrono.workspace     = true
chrono-tz.workspace  = true
serde_json.workspace = true

thiserror.workspace = true
tracing.workspace   = true

base64.workspace           = true
hex.workspace              = true
percent-encoding.workspace = true
sha1.workspace             = true
url.workspace              = true

[dev-dependencies]
axum              = { features = [ "macros" ], version = "0.8" }
imap-sync         = { path = "../imap-sync", version = "0.1.0" }
pretty_assertions = "1"
tokio             = { features = [ "macros", "rt", "net" ], version = "1" }

[lints]
workspace = true
