[package]
name              = "imap-sync"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
jmap-protocol = { path = "../jmap-protocol", version = "0.1.0" }

futures.workspace = true
tokio.workspace   = true

async-imap.workspace       = true
rustls-pki-types.workspace = true
tokio-rustls.workspace     = true
webpki-roots.workspace     = true

oauth2.workspace  = true
reqwest.workspace = true

deadpool-postgres.workspace = true
jmapper-codegen             = { path = "../jmapper-codegen", version = "0.0.0" }
mail-parser.workspace       = true
mail-send.workspace         = true
tokio-postgres.workspace    = true

chrono.workspace     = true
serde.workspace      = true
serde_json.workspace = true

thiserror.workspace = true
tracing.workspace   = true

base64.workspace = true
hex.workspace    = true
sha1.workspace   = true
url.workspace    = true

[dev-dependencies]
tokio = { features = [ "macros", "rt" ], version = "1" }

[lints]
workspace = true
