[package]
name              = "jmap-protocol"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
chrono.workspace     = true
serde.workspace      = true
serde_json.workspace = true

[dev-dependencies]
pretty_assertions = "1"

[lints]
workspace = true
