[package]
name              = "jmap-server"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
dav-sync      = { path = "../dav-sync", version = "0.1.0" }
imap-sync     = { path = "../imap-sync", version = "0.1.0" }
jmap-protocol = { path = "../jmap-protocol", version = "0.1.0" }

axum.workspace       = true
tokio.workspace      = true
tower.workspace      = true
tower-http.workspace = true

chrono.workspace     = true
chrono-tz.workspace  = true
serde.workspace      = true
serde_json.workspace = true

deadpool-postgres.workspace = true
jmapper-codegen             = { path = "../jmapper-codegen", version = "0.0.0" }
tokio-postgres.workspace    = true

thiserror.workspace = true
tracing.workspace   = true

arc-swap.workspace = true
base64.workspace   = true
hex.workspace      = true
sha1.workspace     = true
sha2.workspace     = true
subtle.workspace   = true

futures-util.workspace     = true
mail-builder.workspace     = true
mail-parser.workspace      = true
percent-encoding.workspace = true
rand.workspace             = true
tokio-stream.workspace     = true

[dev-dependencies]
bytes          = "1"
http-body-util = "0.1"
tokio          = { features = [ "macros", "rt" ], version = "1" }
tower          = { features = [ "util" ], version = "0.5" }

[lints]
workspace = true
