[package]
name = "jmapper"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "jmapper"
path = "src/main.rs"

[dependencies]
imap-sync = { version = "0.1.0", path = "../imap-sync" }
jmap-server = { version = "0.1.0", path = "../jmap-server" }
dav-sync = { version = "0.1.0", path = "../dav-sync" }

axum.workspace = true

tokio.workspace = true
clap.workspace = true
serde.workspace = true
toml.workspace = true

tracing.workspace = true
tracing-subscriber.workspace = true

anyhow.workspace = true
url.workspace = true
webbrowser.workspace = true

deadpool-postgres.workspace = true
sha1.workspace = true
sha2.workspace = true

[lints]
workspace = true
