[package]
name              = "jmapper"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "jmapper"
path = "src/main.rs"

[dependencies]
dav-sync    = { path = "../dav-sync", version = "0.1.0" }
imap-sync   = { path = "../imap-sync", version = "0.1.0" }
jmap-server = { path = "../jmap-server", version = "0.1.0" }

axum.workspace = true

clap.workspace  = true
serde.workspace = true
tokio.workspace = true
toml.workspace  = true

tracing.workspace            = true
tracing-subscriber.workspace = true

anyhow.workspace     = true
url.workspace        = true
webbrowser.workspace = true

deadpool-postgres.workspace = true
sha1.workspace              = true
sha2.workspace              = true

[lints]
workspace = true
